<resources>
    <string name="app_name">Widase Mariam</string>
    <string name="intro_text">
        	በስመአብ ወወልድ ወመንፈስ ቅዱስ ፩ዱ አምላክ አሜን!\n
   			ወደ ፈተና እንዳትገቡ ትጉና ጸልዩ!\n
        	ማቴ ፳፮ ፥ ፵፩
	</string>
	<string name="intro_text_one">በስመአብ ወወልድ ወመንፈስ ቅዱስ ፩ዱ አምላክ አሜን!</string>
	<string name="intro_text_two">ወደ ፈተና እንዳትገቡ ትጉና ጸልዩ!\nማቴ ፳፮ ፥ ፵፩</string>
    <string name="intro_song">Intro Song</string>
    <string name="intro_song_summary">Check to play the intro song at startup</string>
    <string name="choose_language_list_label">ቋንቋ | ልሳን | Language</string>
    <string name="choose_language_button_am">አማርኛ</string>
    <string name="choose_language_button_ge">ግዕዝ</string>
    <string name="choose_language_button_en">English</string>
    <string name="choose_language_button_none">None</string>
    <string name="preference_language_am_en">Amharic</string>
    <string name="preference_language_ge_en">Geez</string>
    <string name="preference_language_am">AMHARIC</string>
    <string name="preference_language_ge">GEEZ</string>
    <string name="preference_language_en">ENGLISH</string>
    <string name="preference_language_none">NONE</string>
    <string name="default_language">Default Language</string>
    <string name="default_language_summary">Choose the language you always use</string>
    <string name="default_font_size">Default Font Size</string>
    <string name="default_font_size_summary">Choose the default font size you always use</string>
    <string name="help_menu_label">Help</string>
    <string name="help_user_manual_title">User Manual</string>
    <string name="about_menu_label">About</string>
    <string name="prefs_menu_label">Preferences</string>
    <string name="exit_menu_label">Exit</string>
    <string name="general_loading_msg">Loading, please wait #8230</string>
    <string name="general_error_alert_title">Error</string>
    <string name="general_alert_title">Alert</string>
    <string name="about_the_app_label">
		\t A HYMN OF PRAISE FOR ST. MARY (Ver. 1.0.0) \n
		\t Widase Mariam (Ver. 1.0.0) \n
		\t Programmed by: Biniam Asnake \n
		\t Contact: biny08@gmail.com \n\n
		\t \"Rejoice in the Lord always.\" Phil 4*4
	</string>
    <string name="home_part_of_book_list_label">Choose the part you want to read</string>
    <string name="home_day_zeweter_button">Daily</string>
    <string name="home_day_monday_button">Monday</string>
    <string name="home_day_tuesday_button">Tuesday</string>
    <string name="home_day_wednesday_button">Wednesday</string>
    <string name="home_day_thursday_button">Thursday</string>
    <string name="home_day_friday_button">Friday</string>
    <string name="home_day_saturday_button">Saturday</string>
    <string name="home_day_sunday_button">Sunday</string>
    <string name="home_day_anqetse_birhan_button">Anqetse Birhan</string>
    <string name="home_day_yiwedsewa_melaekt_button">Yiwedswea Melaekt</string>
    <string name="home_day_melka_mariam_button">Melka Mariam</string>
    <string name="home_day_melka_eyesus_button">Melka Eyesus</string>
    <string name="home_day_melka_edom_button">Melka Edom</string>
    <string name="home_go_to_choose_language_button">Go To Choose Language</string>
    <string name="reader_prayer_daily_header_label">
        DAILY PRAYER
    </string>
    <string name="reader_prayer_daily_label">
     	DAILY PRAYER
    </string>
    <string name="reader_prayer_monday_header_label">
        A HYMN OF PRAISE FOR THE SECOND DAY OF THE WEEK (MONDAY)
    </string>
    <string name="reader_prayer_monday_label">
	\t1.	God wished to set free ADAM, Who was sad at heart and sorrowful, and in the greatness of His compassion and mercy to bring him back to the state wherein he was formerly.\n\n

	\t2.	He rose up in flesh of the Virgin without the seed of man. \n
		He came, He saved us. God passed the decree of judgment upon EVE whom the serpent led astray, saying, "I will multiply greatly thy pain and thy suffering" (Genesis iii. 16).\n 
		Nevertheless, His heart inclined to love for man, and He set him free. He hath appeared.\n\n

	\t3.	JESUS CHRIST, the Word Who became incarnate, and He dwelt with us, and we saw His glory like the glory of the Only-begotten of His Father (John i.14), He hath been pleased to show compassion upon us. He hath appeared.\n\n

	\t4.	ISAIAH the Prophet in the spirit of prophecy saw the mystery of EMMANUEL, and therefore he cried out, saying, "A Child is born unto us, a Son is given unto us" (Isaiah ix. 6). He hath appeared.\n\n

	\t5.	Rejoice and be glad, O race of the children of men, for God hath loved the world, and given His only Son that all who believes in Him may have everlasting life (John iii. 16). \n
		The Most High hath sent unto us His arm. He hath appeared.\n\n

	\t6.	He Who was and shall be, He Who came and shall come again, is JESUS CHRIST, the Word Who became incarnate without any change.\n 
		He was a perfect man, without division and without separation, in all His work the Only-begotten, but with one form, one being, and one divinity (or,Godhead)—God the Word. He hath appeared.\n\n

	\t7.	Rejoice, O BETHLEHEM, the town of the Prophets, for in thee was orn CHRIST, the second ADAM, so that He might bring the first ADAM from the earth into the Garden (i.e. Paradise), and destroy the doom of death.\n 
		O ADAM, dust thou art and to dust shalt thou return. Where sin abounded there the grace of God abounded likewise (Romans v.20). He hath appeared.\n\n

	\t8.	Let all souls of men rejoice and be glad with the angles, and let them praise CHRIST, the Kind, and cry out and say, "Glory to God in the heavens, and peace on the earth, [and] His good will to men" (Luke ii. 14).\n 
		He hath abolished the things of old, and overthrown the plot of the Enemy, and torn in pieces the bill of indictment (Ephesians ii. 15) of ADAM and EVE and set them free, He Who was born for us in the city of DAVID our Redeemer, JESUS CHRIST hath done this. He hath appeared.\n\n

	\t9.	Thou Light, Who in truth illuminest all men who dwell in the world, because of Thy love for man Thou hast come into the world, because of Thy love for man Thou hast come into the world.\n 
		All created things rejoiced at Thy coming, because Thou didst deliver ADAM from his error, and didst set free EVE from the suffering of death, and hast given unto us the soul of prophecy. We bless Thee with Thine angles. [Rubric].\n 
		On fast days thou shalt say thus; CHRIST hath risen up in the flesh of the Virgin: He fasted forty days and forty nights in order that He might deliver us.
    </string>
    <string name="reader_prayer_tuesday_header_label">
         A HYMN OF PRAISE FOR THE THIRD DAY OF THE WEEK (TUESDAY)
    </string>
    <string name="reader_prayer_tuesday_label">
	\t1.	The crown of our glory and the origin of our deliverance (or, alvation) and the foundation of our sanctification came into being in MARY the Virgin, who brought for us God the Word, Who became incarnate for our salvation. And after He became man of a certainty He was perfect God. And for this reason she gave birth to Him being a virgin. The power of her bringing forth is a marvellous thing that cannot be described. Of His own free will, and by the good pleasure of His Father and the Holy Spirit, He came forth and hath delivered us.\n\n

	\t2.	Great is the praise of thy virginity, O MARY, thou perfect (or, absolute) virgin. Thou didst receive grace, God was with thee. Thou art the Ladder which JACOB saw reaching from earth to heaven, with the angles of God ascending and descending upon it (Genesis xxviii. 12). So Then\n\n

	\t3.	Thou art the Bush which MOSES saw blazing with fire, and the wood thereof was not consumed (Exodus iii.2). It was the son of God Who dwelt in thy womb, and the fire of His divinity did not consume thy flesh. So then\n\n

	\t4.	Thou art that Field wherein no seed was sown, and yet there went forth from thee the Fruit of Life. Thou art that Treasure-house which JOSEPH bought, and he found therein a Pearl, a precious gem, that is to say, or Redeemer JESUS CHRIST. Thou didst carry it in thy womb and didst bring Him forth into the world. So then\n\n

	\t5.	Rejoice thou, O God-bearer, thou joy of the angels. Rejoice thou, who wast the woman foretold by the Prophets. Rejoice thou, for thou didst find favour, God was with thee. Rejoice thou, for thou hast received the voice of the Angel [GABRIEL], the joy of all the world. Rejoice thou, O Bearer of the Creator of all the world. So then\n\n

	\t6.	Rejoice thou because it is meet that thou shouldst be called,  "Bearer of God". Rejoice thou, O thou woman who deliveredst EVE. Rejoice thou, for thou didst suckle Him Who suckleth all creation. Rejoice thou, O holy woman, the mother of all living beings. We lift our eyes to thee with entreaty that thou wilt pray on our behalf. So then,\n\n

	\t7.	Virgin, O Saint, O Bearer of God, since thou didst bring forth the KING, a marvellous mystery dwelt upon thee for our salvation. We will hold our peace, for we are unable to search into the matter completely, as the greatness thereof rquireth, and will describe that Doer of good things, through the exceedingly great wonder of the manifestation. So then\n\n

	\t8.	He was the Living Word of the Father Who came down on Mount SINAI, and gave the Law to MOSES (Exodus xix. 16 ff.) whilst the top of the mountain was covered with mist, and with smoke, and with darkness, and with storm, and with the terrifying blasts of trumpets. He admonished those who were standing there in fear, So then\n\n

	\t9.	It was He Who came down to thee, O rational mountain, in the humility of the Lover of men. Without any change He became incarnate of thee, and took a perfect body, endowed with reason and like unto ourselves, through the spirit of wisdom. God took up His abode on her and became perfect man so that He might deliver ADAM, and forgive him his sin, and make him to dwell in heaven, and bring him back to his former state in His abundant compassion and mercy. So then\n\n

	\t10.	It is impossible for any to describe the greatness of the Virgin. For God chose her, and He came and dwelt upon her. He Who dwelt in the light, Whom none could approach, was carried in her womb nine months. He Who is invisible, He Who is incomprehensible did MARY bring forth, being a virgin. So then\n\n

	\t11.	This is the stone which DANIEL the prophet saw, which was hewn from a high mountain, without hands (Daniel ii. 34, 35), that is to say, the Word Who went forth from the Father. He came and became incarnate of the Virgin without seed of men, and delivered us. So then\n\n

	\t12.	Thou art the pure twig and the right vessel of the True Faith of the saints our Fathers. O thou pure God-bearer, O thou sealed Virgin, thou didst bring forth for us the Word of the Father, JESUS CHRIST. He came and He hath delivered us. So then\n\n
	
	\t13.	Thou art the Mother of the Glorious Light, O God-bearer. Thou didst carry the Word Who is invisible, and after thou hadst brought Him forth thou didst continue to be a virgin. With praise and blessing shall men magnify thee. So then\n\n

	\t14.	What tongue is able to proclaim that which should be declared concerning thee, O thou pure Virgin, Mother of the Light, the Word of the Father? Thou wast the throne of the KING Whom the Cherubim carry. We ascribe blessings unto thee, O blessed woman, and we will remember thy name from generation to generation, O Beautiful Dove, Mother of our Lord JESUS CHRIST. So then\n\n

	\t15.	Rejoice thou, O MARY, Mother and Maid, for unto Him Who is in thy bosom the angles bring praises, and the Cherubim bow down and worship Him in fear, and the Seraphim spread out their wings, and say concerning Him ceaselessly, "This is the KING of Glory." He came to forgive the sins of the world in the greatness of His compassion\n\n
        
    </string>
</resources>